bynkc/tests/fixtures/negative/204_http_missing_by/src/demo.karn
context demo

type View = { ok: Bool }

service api from http {
  on GET("/health") () -> Effect[HttpResult[View]] {
    Ok(View { ok: true })
  }
}
